fixed like and follow buttons
There was an unclosed a tag that was screwing things up. I went into inspect and looked at the divs. The unclosed a tag was taking up  empty space and taking up an invisible column

--- a/mt/styles/_social_icons.scss
+++ b/mt/styles/_social_icons.scss
@@ -1,15 +1,14 @@
-@import './buttons/like_button';
-@import './buttons/follow_button';
+// @import './buttons/like_button';
+// @import './buttons/follow_button';
+
 
 .social_icons {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr;
-  grid-template-areas: 
-  "icons like_button follow_button";
-  grid-area: social_icons;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
+    grid-template-areas: 
+    "icons like_button follow_button";
 }
-
 .icons {
 display: inline;
 grid-area: icons;
@@ -19,10 +18,78 @@ grid-area: icons;
     display: inline;
 }
 
+
 .like_button {
+    display: grid;
+    grid-template-columns: .5fr 1fr 1fr;
+    grid-template-rows: 1fr;
+    grid-template-areas: 
+    "fa-thumbs-up like num";
+    height: 21px;
+    width: 80px;
+    border-radius: 2px;
+    padding: 4px 2px 0px 6px;
+    background-color: #456DB0;
     grid-area: like_button;
 }
 
+
+.fa-thumbs-up {
+  width: 22px;
+  height: 22px;
+  text-align:justify;
+  grid-area: fa-thumbs-up;
+}
+
+
+.like {
+  color: #fff;
+  text-align:justify;
+  font-size: 13px;
+  grid-area: like;
+}
+
+
+.num {
+  color: #fff;
+  text-align:justify;
+  font-size: 13px;
+  grid-area: num;
+}
+
+
 .follow_button {
-    grid-area: follow_button;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
+    grid-template-areas: 
+    "twitter_follow_icon follow_text";
+    height: 21px;
+    width: 80px;
+    border-radius: 2px;
+    padding: 4px 2px 0px 6px;
+    background-color: #3F98DD;
+}
+
+.follow_button
+
+
+.twitter_follow_icon {
+  width: 22px;
+  height: 22px;
+  text-align:justify;
+  grid-area: twitter_follow_icon;
+}
+
+
+.follow_text {
+  color: #fff;
+  text-align:justify;
+  font-size: 13px;
+  grid-area: follow_text;
+}
+
+
+.tester {
+    grid-area: tester;
 }
