--- a/mt/styles/style.css
+++ b/mt/styles/style.css
@@ -457,6 +457,22 @@ nav {
   grid-area: policy;
 }
 
+.social_icons {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr;
+  grid-template-areas: "icons like_button follow_button";
+}
+
+.icons {
+  display: inline;
+  grid-area: icons;
+}
+
+.icons ul li {
+  display: inline;
+}
+
 .like_button {
   display: grid;
   grid-template-columns: 0.5fr 1fr 1fr;
@@ -467,6 +483,7 @@ nav {
   border-radius: 2px;
   padding: 4px 2px 0px 6px;
   background-color: #456DB0;
+  grid-area: like_button;
 }
 
 .fa-thumbs-up {
@@ -502,7 +519,7 @@ nav {
   background-color: #3F98DD;
 }
 
-.twitter_follow_icon {
+.follow_button .twitter_follow_icon {
   width: 22px;
   height: 22px;
   text-align: justify;
@@ -516,29 +533,8 @@ nav {
   grid-area: follow_text;
 }
 
-.social_icons {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr;
-  grid-template-areas: "icons like_button follow_button";
-  grid-area: social_icons;
-}
-
-.icons {
-  display: inline;
-  grid-area: icons;
-}
-
-.icons ul li {
-  display: inline;
-}
-
-.like_button {
-  grid-area: like_button;
-}
-
-.follow_button {
-  grid-area: follow_button;
+.tester {
+  grid-area: tester;
 }
 
 .info {
